# sometimes-red-sometimes-blue-discord-bot

./: Cargo.toml  LICENSE-MIT  README.md  create-systemd-service-file.sh
src/: main.rs
