[package]
name = "sometimes-red-sometimes-blue-discord-bot"
version = "0.1.0"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.5.13"
