[package]
name = "sometimes-red-sometimes-blue-discord-bot"
version = "0.1.0"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
edition = "2018"
description = "A Discord bot that replies red or blue whenever someone speaks to it"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhilboBaggins/sometimes-red-sometimes-blue-discord-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
rand = "0.7.3"
